Fix caching errors, optimize caching of Leaderboards/Runs